<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.ealse.ccnl</groupId>
	<artifactId>ledenadministratieCCNL</artifactId>
	<version>6.0.0</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<javafx.version>21.0.1</javafx.version>
		<checkstyle.version>10.6.0</checkstyle.version>
		<poi.version>5.2.3</poi.version>
		<fop.version>2.9</fop.version>
		<pdfbox.version>3.0.0</pdfbox.version>
		<jandex.version>3.1.6</jandex.version>
		<awaitility.version>4.2.0</awaitility.version>
		<mockito.version>5.7.0</mockito.version>
		<commons-lang.version>3.12.0</commons-lang.version>
		<sonar.exclusions>**/SpringJavaFXBase.*,**/LedenadministratieApplication.*,
			**/JavaFXApplication.*,**/PrintUtil.*</sonar.exclusions>
		<sonar.coverage.exclusions>**/database/config/*.*,**/DbConfigController.*</sonar.coverage.exclusions>
		<sonar.coverage.jacoco.xmlReportPaths>
			${project.basedir}/../jacoco/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.11</version>
					<configuration>
						<excludes>
							<!-- generated code in module annual-ccnl -->
							<exclude>nl/ealse/ccnl/ledenadministratie/dd/model/*.*</exclude>
							<!-- some class cannot be tested in unit tests These classes are explicitly excluded
							from 
                the reports -->
							<!-- in module frontend-ccnl -->
							<exclude>nl/ealse/javafx/util/PrintUtil.class</exclude>
							<!-- in module javafx-springboot -->
							<exclude>nl/ealse/ccnl/LedenadministratieApplication.class</exclude>
							<exclude>nl/ealse/ccnl/JavaFXApplication.class</exclude>
							<exclude>nl/ealse/javafx/SpringJavaFXBase.class</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M8</version>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.1.2</version>
					<configuration>
						<argLine>-XX:+EnableDynamicAgentLoading ${argLine}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jaxb2-maven-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<configLocation>google_checks.xml</configLocation>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>common-ccnl</module>
		<module>excel-ccnl</module>
		<module>annual-ccnl</module>
		<module>output-ccnl</module>
		<module>services-ccnl</module>
		<module>frontend-ccnl</module>
		<module>jacoco</module>
		<module>minimal-jre</module>
		<module>app-ccnl</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-validator</groupId>
				<artifactId>commons-validator</artifactId>
				<version>1.7</version>
			</dependency>
			<dependency>
				<groupId>jakarta.activation</groupId>
				<artifactId>jakarta.activation-api</artifactId>
				<version>2.1.2</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.10.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.7.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${javafx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.4.11</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>2.22.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>nexus-releases</id>
			<name>Nexus Releases</name>
			<url>http://localhost:8081/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>true</uniqueVersion>
			<id>nexus-snapshots</id>
			<name>Nexus Snapshots</name>
			<url>http://localhost:8081/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>


</project>